2004-03-31  Matti Aarnio  <mea@zmailer.org>

	* router/libdb/gdbm.c:
	    Eugene Crosser reports odd gdbm database opening problems
	    in, and I see the same in Solaris, but not in Linux...
	    Adding now some extra debug stuff to see what goes wrong.
	    .. Looks like 'make clean; make' would help ?
	    My own Solaris problem was bad ZENV setup.

	* include/sleepycatdb.h, lib/sleepycatdb.c, man/smtpserver.8.in,
	  smtpserver/policytest.h, smtpserver/policytest.c:
	    Dot in some notes about SleepyCat DB RPC mechanisms..
	    More is yet in "TO DO" list...
	
	* router/libdb/bsdbtree.c, router/libdb/bsdhash.c:
	    Do a bit more elaborate comparison set on database alteration
	    from underneath ourself.

	* utils/perl/Makefile.in,  configure.in:
	    More hoops to get perl setup parameter feed in,
	    and to make installation into non-root DESTDIR=
	    to succeed.

	* configure.in:
	    Accept environment variables  LIBDB3,  LIBDB4,  which
	    have effect if system has  <db3/db.h>  and  <db4/db.h>
	    headers, respectively.

	* router/libdb/gdbm.c:
	    Urgh, folks have repeatedly told me that this gdbm
	    interface leaks fds like no tomorrow..  I finally
	    tried it myself, and it was ... most educative.
	    Looks like sip->dbprivate datablock introduction
	    code mutation was never completed.

	* router/libdb/ndbm.c:
	    Did same code mutation as gdbm.c has, and completed it
	    all in one go..  (compile tested in Solaris 8)

	* libsh/isterminal.c, libsh/execute.c, libsh/sslwalter.c,
	  include/libz.h:
	    New  z_isterminal(fd)  function.  If it yields false,
	    execute.c will cry out missing external program with
	    LOG_EMERG level message.

	* configure.in:
	    AC_HEADER_CHECK(termios.h)

2004-03-19  Matti Aarnio  <mea@zmailer.org>

	* TODO, lib/sleepycatdb.c:
	    Add some markers for RPC access mode; work to be done...

	* packaging/rpm/README-RPM, packaging/rpm/zmailer.spec:
	    Xose Vazquez  sent some updates.
